- code formating - fixed spacing

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -230,7 +230,7 @@ center {
 }
 
 .modal {
-  display:none;
+  display: none;
 }
 
 .pageSubTitle {
@@ -251,10 +251,10 @@ center {
 
 .coverScreen {
   background: rgba(255, 255, 255, 0.40);
-backdrop-filter: blur(3px);
-border-radius: 14px;
-margin: 20px;
-border-radius: 25px;
-padding: 10px;
-height: calc(100vh - 40px);
+  backdrop-filter: blur(3px);
+  border-radius: 14px;
+  margin: 20px;
+  border-radius: 25px;
+  padding: 10px;
+  height: calc(100vh - 58px);
 }
